--- a/react-styleguidist-experiment/package.json
+++ b/react-styleguidist-experiment/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@brandwatch/axiom-components": "^6.3.1",
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -28,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-styleguidist": "^9.1.11"
   }
 }
