--- a/storybook-experiment/package.json
+++ b/storybook-experiment/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@brandwatch/axiom-components": "^6.3.1",
+    "@storybook/react": "^5.1.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -12,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -28,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-notes": "^5.1.9"
   }
 }
