--- a/packages/axiom-components/package.json
+++ b/packages/axiom-components/package.json
@@ -16,10 +16,10 @@
     "element-closest": "^2.0.2",
     "lodash.omit": "^4.5.0",
     "luxon": "^1.12.0",
-    "popper.js": "1.12.5",
     "prop-types": "^15.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-popper": "^1.3.6",
     "react-transition-group": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
     "uuid": "^3.3.2"
