--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "ci:test": "TZ=utc jest ./packages/**/dist --config .jest.ci.json",
     "lint": "yarn run lint:js && yarn run lint:css",
     "lint:css": "stylelint 'packages/**/*.css' 'site/**/*.css'",
-    "lint:js": "eslint --config .eslintrc packages site",
+    "lint:js": "eslint --config .eslintrc packages site axiom-playground",
     "lint:commits": "./scripts/validate_commit_messages.sh",
     "publish:packages": "bash ./scripts/publish_packages.sh",
     "publish:site": "bash ./scripts/publish_site.sh",
     "start": "bash ./scripts/start_development.sh",
+    "start:playground": "cd axiom-playground && yarn start",
     "postinstall": "lerna run prepublish && lerna run prepare",
     "test": "TZ=utc BABEL_ENV=test jest ./packages --config .jest.json"
   },
