build: update build to generate both esm and cjs
also update package jsons to point modules at esm build

--- a/packages/axiom-charts/package.json
+++ b/packages/axiom-charts/package.json
@@ -3,6 +3,7 @@
   "version": "5.2.13",
   "description": "Brandwatch Axiom - Charting components",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
