--- a/packages/axiom-components/package.json
+++ b/packages/axiom-components/package.json
@@ -3,6 +3,7 @@
   "version": "8.8.1",
   "description": "Brandwatch Axiom - Components",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "sideEffects": [
     "./src/Base/Base.js",
     "./**/*.css"
