--- a/packages/axiom-composites/package.json
+++ b/packages/axiom-composites/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.14",
   "description": "Brandwatch Axiom - Composites",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
