--- a/packages/axiom-documentation-viewer/package.json
+++ b/packages/axiom-documentation-viewer/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.46",
   "description": "Brandwatch Axiom - Documentation Viewer",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
