--- a/packages/eslint-config-axiom/package.json
+++ b/packages/eslint-config-axiom/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.5",
   "description": "Brandwatch Axiom - eslint config",
   "main": "dist/index.js",
+  "module": "dist/esm/index.js",
   "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
