--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
     "validate-commit": "^3.4.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "@brandwatch/babel-plugin-transform-svg-axiom": "^0.1.2"
   }
 }
