--- a/packages/babel-plugin-transform-svg-axiom/package.json
+++ b/packages/babel-plugin-transform-svg-axiom/package.json
@@ -2,8 +2,7 @@
   "name": "@brandwatch/babel-plugin-transform-svg-axiom",
   "version": "0.1.2",
   "description": "Brandwatch Axiom - Babel plugin to inline SVG files",
-  "main": "dist/index.js",
-  "module": "dist/esmindex.js",
+  "main": "dist/cjs/index.js",
   "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
